src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */

.sources-panel {
  background-color: var(--theme-sidebar-background);
  display: flex;
  flex: 1;
  flex-direction: column;
  overflow: hidden;
  position: relative;
}

.sources-panel * {
  user-select: none;
}

.sources-pane {
  display: flex;
  flex-direction: column;
  overflow-x: auto;
  overflow-y: hidden;
}

.sources-pane.expanded {
  flex: 1;
}

.sources-list .img.blackBox {
  mask-size: 13px;
  background-color: var(--theme-icon-checked-color);
}

.sources-list {
  flex: 1;
  display: flex;
}

.sources-list .managed-tree {
  flex: 1;
  display: flex;
}

.sources-list .managed-tree .tree {
  padding: 4px 0;
}

.sources-list .managed-tree .tree .node {
  display: flex;
  align-items: center;
  width: 100%;
  padding: 3px 8px 3px 6px;
}

.sources-list .managed-tree .tree .tree-node:not(.focused):hover {
  background: var(--theme-toolbar-background-hover);
}

.sources-list .img {
  margin-inline-end: 4px;
}

.sources-list .tree .focused .img {
  background-color: #ffffff;
}

.sources-list .tree .focused .label {
  color: #ffffff;
}

/* Use the same width as .img.arrow */
.sources-list .tree .img.no-arrow {
  width: 10px;
  visibility: hidden;
}

.sources-list .tree .label .suffix {
  font-style: italic;
  font-size: 0.9em;
  color: var(--theme-comment);
}

.sources-list .tree .focused .label .suffix {
  color: inherit;
}

.theme-dark .source-list .node.focused {
  background-color: var(--theme-tab-toolbar-background);
}

.sources-list .tree .label {
  display: inline-block;
  line-height: 16px;
  color: var(--theme-body-color);
}

.no-sources-message {
  width: 100%;
  font-style: italic;
  text-align: center;
  padding: 0.5em;
  font-size: 12px;
  user-select: none;
  justify-content: center;
  align-items: center;
}

.sources-panel .outline {
  height: 100%;
}

.source-outline-tabs {
  font-size: 12px;
  width: 100%;
  background: var(--theme-body-background);
  display: flex;
  user-select: none;
  box-sizing: border-box;
  height: var(--editor-header-height);
  margin: 0;
  padding: 0;
  border-bottom: 1px solid var(--theme-splitter-color);
}

.source-outline-tabs .tab {
  align-items: center;
  background-color: var(--theme-toolbar-background);
  color: var(--theme-toolbar-color);
  cursor: default;
  display: inline-flex;
  flex: 1;
  justify-content: center;
  overflow: hidden;
  padding: 4px 8px;
  position: relative;
}

.source-outline-tabs .tab::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: var(--tab-line-color, transparent);
  transition: transform 250ms var(--animation-curve), opacity 250ms var(--animation-curve);
  opacity: 0;
  transform: scaleX(0);
}

.source-outline-tabs .tab.active {
  --tab-line-color: var(--tab-line-selected-color);
  color: var(--theme-toolbar-selected-color);
  border-bottom-color: transparent;
}

.source-outline-tabs .tab:not(.active):hover {
  --tab-line-color: var(--tab-line-hover-color);
  background-color: var(--theme-toolbar-hover);
}

.source-outline-tabs .tab:hover::before,
.source-outline-tabs .tab.active::before {
  opacity: 1;
  transform: scaleX(1);
}

.source-outline-panel {
  flex: 1;
  overflow: auto;
}

